<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#040000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:background="#040000"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:layout_alignParentStart="false" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="220dp"
        android:layout_toEndOf="@id/imageView2">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Name:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Father&apos;s Name:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="University:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roll Number:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Degree"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone #:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FDFBFB"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <android.inputmethodservice.ExtractEditText
              android:id="@+id/edittext"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:allowUndo="true"
              android:clickable="true"
              android:cursorVisible="false"
              android:editable="true"
              android:hint="@string/Name"
              android:inputType="text"
              android:textColor="#FDFBFB"
              android:textColorHint="#FDFBFB"
              android:textCursorDrawable="@null" />

          <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:clickable="true"
            android:cursorVisible="false"
            android:editable="true"
            android:hint="@string/FathersName"
            android:inputType="text"
            android:textColor="#FDFBFB"
            android:textColorHint="#FDFBFB"
            android:textCursorDrawable="@null"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

          <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:clickable="true"
            android:cursorVisible="false"
            android:editable="true"
            android:hint="@string/University"
            android:inputType="text"
            android:textColor="#FDFBFB"
            android:textColorHint="#FDFBFB"
            android:textCursorDrawable="@null" />

          <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:clickable="true"
            android:cursorVisible="false"
            android:editable="true"
            android:hint="@string/RollNumber"
            android:inputType="text"
            android:textColor="#FDFBFB"
            android:textColorHint="#FDFBFB"
            android:textCursorDrawable="@null"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/edittext7"
            android:layout_toEndOf="@+id/edittext7"
            android:layout_below="@+id/textView" />

          <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:clickable="true"
            android:cursorVisible="false"
            android:editable="true"
            android:hint="@string/Degree"
            android:inputType="text"
            android:textColor="#FDFBFB"
            android:textColorHint="#FDFBFB"
            android:textCursorDrawable="@null" />

          <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:clickable="true"
            android:cursorVisible="false"
            android:editable="true"
            android:hint="@string/Email"
            android:inputType="text"
            android:textColor="#FDFBFB"
            android:textColorHint="#FDFBFB"
            android:textCursorDrawable="@null" />

          <android.inputmethodservice.ExtractEditText
            android:id="@+id/edittext7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:hint="@string/PhoneNumber"
            android:inputType="text"
            android:textColor="#FDFBFB"
            android:textColorHint="#FDFBFB"
            android:textCursorDrawable="@null" />


      </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="#FDFBFB"
        android:text="Configure"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#040000"
        android:src="@drawable/icon"
        android:layout_alignTop="@+id/scrollView"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView" />

</RelativeLayout>